<resources>
    <string name="app_name">Shopping</string>
    <string name="action_settings">Settings</string>
    <string name="bu1">ลงทะเบียนด้วย Email</string>
    <string name="bu2">ดำเนินการต่อด้วย Facebook</string>
    <string name="bu">ดำเนินการต่อ</string>
    <string name="bu_1">ดำเนินการต่อ2</string>
    <string name="phon">เบอร์มือถือ</string>
    <string name="view">สมัครด้วย</string>
    <string name="sw">สมัคร</string>
    <string name="sw1">เข้าสู่ระบบ</string>
    <string name="title_activity_main2">Shopping</string>
    <string name="Email">E-mail/โทรศัพท์/ชื่อผู้ใช้</string>
    <string name="password">รหัสผ่าน</string>
    <string name="sms1">เข้าสู่ระบบด้วยSMS</string>
    <string name="title_activity_addlist_product">AddlistProductActivity</string>

</resources>
