<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/linearlaout"
        android:padding="0dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:hint="@string/Email"/>

        <EditText
            android:layout_marginTop="3dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/bu"
            android:layout_marginTop="16dp"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@mipmap/group7"
            android:text="@string/bu"
            android:textColor="@color/bu"/>

        <Button
            android:layout_marginTop="166dp"
            android:layout_width="300dp"
            android:layout_height="33dp"
            android:background="@drawable/group3"
            android:textColor="@color/image"
            android:textSize="@dimen/image"
            android:text="@string/view"
            />

        <Button
            android:id="@+id/bu1"
            android:layout_marginTop="16dp"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@mipmap/sms1"
            android:text="@string/sms1"
            android:textColor="@color/bu1"/>
        <Button
            android:id="@+id/bu2"
            android:layout_marginTop="16dp"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@mipmap/group4"
            android:text="@string/bu2"
            android:textColor="@color/bu2"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>